sumo/tests/traci/ChangeRoute/InvalidNodeId/errors.traci
Error: Answered with error to command 48: Can not retrieve node with ID 42
